# status_lamp

./: .gitignore  Makefile  README.md  TODO.md  api.json  compile_commands.json  platformio.ini  status_lamp.ino  test.json
cli/: Cargo.toml  Makefile  TODO.md  dune-project  fire.json  rust_finished.json  test_data.json
cli/_build/: .db  .digest-db  log
cli/_build/.sandbox/1adb45fe730f78235686bab562253b0b/default/lib/: protcol.ml
cli/_build/.sandbox/5491fee445d07586f94e4b6c8e47cb82/default/lib/: animations.ml
cli/_build/.sandbox/969732ddc2535d6aca7f2836304a6d3a/default/lib/: socket.ml
cli/_build/default/: cli.dune-package  cli.install
cli/_build/default/.dune/: configurator  configurator.v2
cli/_build/default/.ppx/a4ea0d83c521725fd7b0167e93f2550b/: dune__exe___ppx.cmi  dune__exe___ppx.cmo
cli/_build/default/.ppx/a8a387567d10d0ceebd3c66fbb46b07e/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
cli/_build/default/lib/: animations.pp.ml  args.ml  args.pp.ml  cli.cmxa  cli.ml-gen  json.ml  json.pp.ml  protcol.ml  protcol.pp.ml  socket.ml  socket.pp.ml  utils.pp.ml  writer.ml  writer.pp.ml
cli/_build/default/lib/.cli.objs/: cli__Animations.impl.d  cli__Args.impl.all-deps  cli__Args.impl.d  cli__Json.impl.all-deps  cli__Json.impl.d  cli__Protcol.impl.d  cli__Socket.impl.d  cli__Utils.impl.all-deps  cli__Utils.impl.d  cli__Writer.impl.all-deps  cli__Writer.impl.d
cli/_build/default/lib/.merlin-conf/: lib-cli
cli/lib/: animations.ml  args.ml  dune  json.ml  utils.ml
cli/src/: args.rs  client.rs  common.rs  main.rs  opt.rs  port.rs  server.rs
cli/test/: dune
(+179 files in other folders)
