
[package]
name = "status_lamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
diff = "0.1.13"
log = "0.4.20"
pretty-log = "1.5.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_json = "1.0.112"
serde_repr = "0.1.18"
serialport = "4.3.0"
